Fix overflow on chrome

--- a/src/index.css
+++ b/src/index.css
@@ -3,9 +3,5 @@
 #root{
     height: 100%; 
     min-height: 100%;
-    overflow: hidden;
-}
-
-html, body {
     overflow: scroll;
 }
